# clipper-lua

./: .gitignore  README.md
specs/: run-linux.sh  run-osx.sh  run.bat  run.sh  tests.lua
src/: CMakeLists.txt  clipper.lua  clipper_wrap.cpp  main.lua  run-tests.sh
tests/: main.lua  run-osx.sh  run-tests.sh
